syntax = "proto3";

import "bscp.io/pkg/protocol/core/base/base.proto";
import "bscp.io/pkg/protocol/core/release/release.proto";

package pbinstance;

option go_package = "bscp.io/pkg/protocol/core/instance;pbinstance";

// CurrentReleasedInstance source resource reference: pkg/dal/table/instance.go
message CurrentReleasedInstance {
    uint32 id                              = 1;
    ReleasedInstanceSpec spec              = 2;
    pbrelease.ReleaseAttachment attachment = 3;
    pbbase.CreatedRevision revision        = 4;
}

// ReleasedInstanceSpec source resource reference: pkg/dal/table/instance.go
message ReleasedInstanceSpec {
    string uid        = 1;
    uint32 release_id = 2;
    string memo       = 3;
}
